Fix minor spacing with tables

--- a/app/components/DataTable/index.scss
+++ b/app/components/DataTable/index.scss
@@ -1,6 +1,6 @@
 .data-table {
   &--padded {
-    padding: 16px 0;
+    padding: 16px 8px;
   }
 
   &__expand-cell {
